[package]
name = "georender"
version = "0.1.0"
authors = ["okdistribute <633012+okdistribute@users.noreply.github.com>"]
edition = "2018"

[dev-dependencies]
osmpbf = "0.1"

[dependencies]
kv = "0.20.2"
desert = "1.0.3"
varinteger = "1.0.6"
regex = "1"
lazy_static = "1.4.0"
failure = "0.1.8"
osm-is-area = "0.1.3"
hex-slice = "0.1.4"

[[example]]
name = "osmpbf"
path = "example/osmpbf/main.rs"
required-features = [ ]
