[package]
name = "georender-pack"
description = "Pack osm data into a buffer based on the peermaps buffer schema"
version = "2.0.0"
authors = ["Karissa McKelvey <karissa.mckelvey@gmail.com>"]
keywords = ["osm", "open street map", "peermaps", "p2p", "decentralized", "maps"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/peermaps/georender-pack.rs"
homepage = "https://github.com/peermaps/georender-pack.rs"
documentation = "https://docs.rs/georender-pack"
license = "MIT OR Apache-2.0"


[dev-dependencies]
osmpbf = "0.1"

[dependencies]
desert = "1.0.3"
regex = "1"
lazy_static = "1.4.0"
failure = "0.1.8"
osm-is-area = "0.1.3"
hex = "0.4.2"
earcutr = "0.1.1"

[[example]]
name = "osmpbf"
path = "example/osmpbf/main.rs"
required-features = [ ]
